fix: tolerate inaccessible shopify webhook topics