@@ -2,147 +2,128 @@ package com.ai.fabric.product.shopify.bridge.webhook.service;
 
 import com.ai.fabric.product.shopify.bridge.client.shopify.ShopifyAdminGraphqlClient;
 import com.ai.fabric.product.shopify.bridge.config.ShopifyBridgeProperties;
+import com.ai.fabric.product.shopify.bridge.webhook.model.ShopifyWebhookSubscriptionStatusSummary;
+import com.ai.fabric.product.shopify.bridge.webhook.model.ShopifyWebhookSubscriptionTopicStatusSummary;
 import org.junit.jupiter.api.Test;
 
 import java.util.List;
 import java.util.Map;
 
-import static org.mockito.ArgumentMatchers.anyMap;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatCode;
+import static org.mockito.ArgumentMatchers.anyMap;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 class ShopifyWebhookSubscriptionServiceTest {
 
     @Test
-    void reconcileCreatesMissingSubscriptions() {
+    void inspectContentSubscriptionsMarksInaccessibleTopicsAsBlocked() {
         ShopifyAdminGraphqlClient client = mock(ShopifyAdminGraphqlClient.class);
-        ShopifyWebhookSubscriptionService service = new ShopifyWebhookSubscriptionService(client, properties());
-
-        when(client.execute(eq("alpha.myshopify.com"), eq("token"), eq(listQuery()), anyMap()))
-            .thenReturn(emptyListResponse());
-        when(client.execute(eq("alpha.myshopify.com"), eq("token"), eq(createMutation()), anyMap()))
-            .thenReturn(createResponse());
-
-        service.reconcileContentSubscriptions("alpha.myshopify.com", "token");
-
-        verify(client, times(13)).execute(eq("alpha.myshopify.com"), eq("token"), eq(listQuery()), anyMap());
-        verify(client, times(13)).execute(eq("alpha.myshopify.com"), eq("token"), eq(createMutation()), anyMap());
-    }
-
-    @Test
-    void reconcileReusesMatchingSubscriptionsWithoutCreatingDuplicates() {
-        ShopifyAdminGraphqlClient client = mock(ShopifyAdminGraphqlClient.class);
-        ShopifyWebhookSubscriptionService service = new ShopifyWebhookSubscriptionService(client, properties());
-
-        when(client.execute(eq("alpha.myshopify.com"), eq("token"), eq(listQuery()), anyMap()))
-            .thenReturn(matchingListResponse());
-
-        service.reconcileContentSubscriptions("alpha.myshopify.com", "token");
-
-        verify(client, times(13)).execute(eq("alpha.myshopify.com"), eq("token"), eq(listQuery()), anyMap());
-        verify(client, never()).execute(eq("alpha.myshopify.com"), eq("token"), eq(createMutation()), anyMap());
-        verify(client, never()).execute(eq("alpha.myshopify.com"), eq("token"), eq(deleteMutation()), anyMap());
-    }
-
-    @Test
-    void reconcileDeletesSameNamedSubscriptionWhenUriDrifts() {
-        ShopifyAdminGraphqlClient client = mock(ShopifyAdminGraphqlClient.class);
-        ShopifyWebhookSubscriptionService service = new ShopifyWebhookSubscriptionService(client, properties());
-
-        when(client.execute(eq("alpha.myshopify.com"), eq("token"), eq(listQuery()), anyMap()))
-            .thenReturn(driftedListResponse());
-        when(client.execute(eq("alpha.myshopify.com"), eq("token"), eq(deleteMutation()), anyMap()))
-            .thenReturn(deleteResponse());
-        when(client.execute(eq("alpha.myshopify.com"), eq("token"), eq(createMutation()), anyMap()))
-            .thenReturn(createResponse());
-
-        service.reconcileContentSubscriptions("alpha.myshopify.com", "token");
-
-        verify(client, times(13)).execute(eq("alpha.myshopify.com"), eq("token"), eq(listQuery()), anyMap());
-        verify(client, times(1)).execute(eq("alpha.myshopify.com"), eq("token"), eq(deleteMutation()), anyMap());
-        verify(client, times(13)).execute(eq("alpha.myshopify.com"), eq("token"), eq(createMutation()), anyMap());
-    }
-
-    @Test
-    void inspectMarksMissingAndDriftedTopics() {
-        ShopifyAdminGraphqlClient client = mock(ShopifyAdminGraphqlClient.class);
-        ShopifyWebhookSubscriptionService service = new ShopifyWebhookSubscriptionService(client, properties());
-
-        when(client.execute(eq("alpha.myshopify.com"), eq("token"), eq(listQuery()), anyMap()))
+        when(client.execute(anyString(), anyString(), anyString(), anyMap()))
             .thenAnswer(invocation -> {
-                Map<String, Object> variables = invocation.getArgument(3);
                 @SuppressWarnings("unchecked")
-                List<String> topics = (List<String>) variables.get("topics");
-                String topic = topics == null || topics.isEmpty() ? null : topics.get(0);
-                if ("APP_UNINSTALLED".equals(topic)) {
-                    return driftedListResponse();
+                List<String> topics = (List<String>) ((Map<String, Object>) invocation.getArgument(3)).get("topics");
+                String topic = topics.getFirst();
+                if (topic.startsWith("METAOBJECTS_")) {
+                    return Map.of(
+                        "errors",
+                        List.of(Map.of("message", "topics argument cannot contain any topics to which you do not have access."))
+                    );
                 }
-                if ("PRODUCTS_CREATE".equals(topic)) {
-                    return matchingListResponse("PRODUCTS_CREATE", "loom-products-create");
+                if ("APP_SCOPES_UPDATE".equals(topic)) {
+                    return listResponse(topic, "https://bridge.example.com/api/webhooks/shopify", "loom-app-scopes-update");
                 }
                 return emptyListResponse();
             });
 
-        var summary = service.inspectContentSubscriptions("alpha.myshopify.com", "token");
+        ShopifyWebhookSubscriptionService service = new ShopifyWebhookSubscriptionService(client, properties());
+
+        ShopifyWebhookSubscriptionStatusSummary summary = service.inspectContentSubscriptions("demo.myshopify.com", "token");
 
         assertThat(summary.status()).isEqualTo("DEGRADED");
-        assertThat(summary.expectedCount()).isEqualTo(13);
-        assertThat(summary.readyCount()).isEqualTo(1);
-        assertThat(summary.missingCount()).isEqualTo(11);
-        assertThat(summary.driftedCount()).isEqualTo(1);
-        assertThat(summary.topics()).anyMatch(topic -> "APP_UNINSTALLED".equals(topic.topic()) && "DRIFTED".equals(topic.status()));
-        assertThat(summary.topics()).anyMatch(topic -> "PRODUCTS_CREATE".equals(topic.topic()) && "READY".equals(topic.status()));
+        assertThat(summary.topics())
+            .extracting(ShopifyWebhookSubscriptionTopicStatusSummary::topic, ShopifyWebhookSubscriptionTopicStatusSummary::status)
+            .contains(
+                org.assertj.core.groups.Tuple.tuple("APP_SCOPES_UPDATE", "READY"),
+                org.assertj.core.groups.Tuple.tuple("METAOBJECTS_CREATE", "BLOCKED"),
+                org.assertj.core.groups.Tuple.tuple("METAOBJECTS_UPDATE", "BLOCKED"),
+                org.assertj.core.groups.Tuple.tuple("METAOBJECTS_DELETE", "BLOCKED")
+            );
     }
 
-    private ShopifyBridgeProperties properties() {
+    @Test
+    void reconcileContentSubscriptionsSkipsInaccessibleTopics() {
+        ShopifyAdminGraphqlClient client = mock(ShopifyAdminGraphqlClient.class);
+        when(client.execute(anyString(), anyString(), anyString(), anyMap()))
+            .thenAnswer(invocation -> {
+                @SuppressWarnings("unchecked")
+                List<String> topics = (List<String>) ((Map<String, Object>) invocation.getArgument(3)).get("topics");
+                String topic = topics.getFirst();
+                if (topic.startsWith("METAOBJECTS_")) {
+                    return Map.of(
+                        "errors",
+                        List.of(Map.of("message", "topics argument cannot contain any topics to which you do not have access."))
+                    );
+                }
+                return listResponse(
+                    topic,
+                    "https://bridge.example.com/api/webhooks/shopify",
+                    expectedName(topic)
+                );
+            });
+
+        ShopifyWebhookSubscriptionService service = new ShopifyWebhookSubscriptionService(client, properties());
+
+        assertThatCode(() -> service.reconcileContentSubscriptions("demo.myshopify.com", "token"))
+            .doesNotThrowAnyException();
+    }
+
+    private static ShopifyBridgeProperties properties() {
         return new ShopifyBridgeProperties(
-            "Loom Companion",
-            "shopify-bridge-prod",
+            "Shopify Bridge Service",
+            "shopify-bridge-test",
             "SHOPIFY",
             "SHOPIFY_BRIDGE_SERVICE",
-            "prod",
+            "test",
             "https://bridge.example.com",
             "2026-04",
-            "shopify-api-key",
-            "shopify-api-secret",
-            "https://platform.example.com",
-            "platform-key",
-            "X-PLATFORM-API-KEY",
-            "webhook-secret",
-            "bridge-admin-key",
-            "X-BRIDGE-API-KEY"
+            "",
+            "",
+            "",
+            "",
+            "",
+            "",
+            "",
+            ""
         );
     }
 
-    private Map<String, Object> emptyListResponse() {
+    private static Map<String, Object> emptyListResponse() {
         return Map.of(
-            "data", Map.of(
-                "webhookSubscriptions", Map.of(
-                    "edges", List.of()
-                )
+            "data",
+            Map.of(
+                "webhookSubscriptions",
+                Map.of("edges", List.of())
             )
         );
     }
 
-    private Map<String, Object> matchingListResponse() {
-        return matchingListResponse("APP_UNINSTALLED", "loom-app-uninstalled");
-    }
-
-    private Map<String, Object> matchingListResponse(String topic, String name) {
+    private static Map<String, Object> listResponse(String topic, String uri, String name) {
         return Map.of(
-            "data", Map.of(
-                "webhookSubscriptions", Map.of(
-                    "edges", List.of(
+            "data",
+            Map.of(
+                "webhookSubscriptions",
+                Map.of(
+                    "edges",
+                    List.of(
                         Map.of(
-                            "node", Map.of(
-                                "id", "gid://shopify/WebhookSubscription/1",
+                            "node",
+                            Map.of(
+                                "id", "gid://shopify/WebhookSubscription/" + topic,
                                 "topic", topic,
-                                "uri", "https://bridge.example.com/api/webhooks/shopify",
+                                "uri", uri,
                                 "name", name
                             )
                         )
@@ -152,99 +133,22 @@ class ShopifyWebhookSubscriptionServiceTest {
         );
     }
 
-    private Map<String, Object> driftedListResponse() {
-        return Map.of(
-            "data", Map.of(
-                "webhookSubscriptions", Map.of(
-                    "edges", List.of(
-                        Map.of(
-                            "node", Map.of(
-                                "id", "gid://shopify/WebhookSubscription/2",
-                                "topic", "APP_UNINSTALLED",
-                                "uri", "https://old.example.com/api/webhooks/shopify",
-                                "name", "loom-app-uninstalled"
-                            )
-                        )
-                    )
-                )
-            )
-        );
-    }
-
-    private Map<String, Object> createResponse() {
-        return Map.of(
-            "data", Map.of(
-                "webhookSubscriptionCreate", Map.of(
-                    "webhookSubscription", Map.of(
-                        "id", "gid://shopify/WebhookSubscription/99",
-                        "topic", "APP_UNINSTALLED",
-                        "uri", "https://bridge.example.com/api/webhooks/shopify",
-                        "name", "loom-app-uninstalled"
-                    ),
-                    "userErrors", List.of()
-                )
-            )
-        );
-    }
-
-    private Map<String, Object> deleteResponse() {
-        return Map.of(
-            "data", Map.of(
-                "webhookSubscriptionDelete", Map.of(
-                    "deletedWebhookSubscriptionId", "gid://shopify/WebhookSubscription/2",
-                    "userErrors", List.of()
-                )
-            )
-        );
-    }
-
-    private String listQuery() {
-        return """
-        query ShopifyBridgeWebhookSubscriptions($topics: [WebhookSubscriptionTopic!]) {
-          webhookSubscriptions(first: 50, topics: $topics) {
-            edges {
-              node {
-                id
-                topic
-                uri
-                name
-              }
-            }
-          }
-        }
-        """;
-    }
-
-    private String createMutation() {
-        return """
-        mutation ShopifyBridgeCreateWebhookSubscription($topic: WebhookSubscriptionTopic!, $webhookSubscription: WebhookSubscriptionInput!) {
-          webhookSubscriptionCreate(topic: $topic, webhookSubscription: $webhookSubscription) {
-            webhookSubscription {
-              id
-              topic
-              uri
-              name
-            }
-            userErrors {
-              field
-              message
-            }
-          }
-        }
-        """;
-    }
-
-    private String deleteMutation() {
-        return """
-        mutation ShopifyBridgeDeleteWebhookSubscription($id: ID!) {
-          webhookSubscriptionDelete(id: $id) {
-            deletedWebhookSubscriptionId
-            userErrors {
-              field
-              message
-            }
-          }
-        }
-        """;
+    private static String expectedName(String topic) {
+        return switch (topic) {
+            case "APP_UNINSTALLED" -> "loom-app-uninstalled";
+            case "APP_SCOPES_UPDATE" -> "loom-app-scopes-update";
+            case "APP_SUBSCRIPTIONS_UPDATE" -> "loom-app-subscriptions-update";
+            case "PRODUCTS_CREATE" -> "loom-products-create";
+            case "PRODUCTS_UPDATE" -> "loom-products-update";
+            case "PRODUCTS_DELETE" -> "loom-products-delete";
+            case "COLLECTIONS_CREATE" -> "loom-collections-create";
+            case "COLLECTIONS_UPDATE" -> "loom-collections-update";
+            case "COLLECTIONS_DELETE" -> "loom-collections-delete";
+            case "METAOBJECTS_CREATE" -> "loom-metaobjects-create";
+            case "METAOBJECTS_UPDATE" -> "loom-metaobjects-update";
+            case "METAOBJECTS_DELETE" -> "loom-metaobjects-delete";
+            case "SHOP_UPDATE" -> "loom-shop-update";
+            default -> topic == null ? null : topic.toLowerCase();
+        };
     }
 }
